--- a/src/teken.3
+++ b/src/teken.3
@@ -1,6 +1,8 @@
 .\" Copyright (c) 2011 Ed Schouten <ed@FreeBSD.org>
 .\" All rights reserved.
 .\"
+.\" SPDX-License-Identifier: BSD-2-Clause
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
